--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "test": "mocha -r ts-node/register src/test/test.ts"
+    "test": "mocha --exit -r ts-node/register src/test/**/*/*.test.ts"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "@types/node": "^13.9.0",
     "axios": "^0.19.2",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cheerio": "^1.0.0-rc.3",
     "cron": "^1.8.2",
     "express": "^4.17.1",
